# stl-voxeler

./: .gitignore  CMakeLists.txt  voxeler.cpp  voxeler.sln  voxeler.vcxproj  voxeler.vcxproj.filters
source/: main.cpp  voxeler.cpp  voxeler.h
source/tests/: voxeler_test.cpp
